accessibility fixes, alt text added to img, label added to form element, color contrast fixed

--- a/styles/before-main.css
+++ b/styles/before-main.css
@@ -64,7 +64,7 @@ p {
  *
  */
 a {
-  color: #777777;
+  color: #FFFFFF;
 	text-decoration: none;
 }
 /*
